fix: nav align

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@
       margin: 50px 50px 0px 50px;
     }
     nav {
-      text-align: left;
+      text-align: center;
     }
      li {
       font-size: 24px;
